# CoffeeMonitorColombia

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  daily-capture.yml  deploy-pwa.yml
config/: settings.py
database/: __init__.py  connection.py  schema.py
docs/: index.html
repositories/: __init__.py  alerts_repo.py  market_repo.py  price_repo.py  sources_repo.py
scrapers/: __init__.py  base_scraper.py  coop_scraper.py  fnc_scraper.py  trm_scraper.py
services/: __init__.py  capture_service.py  export_service.py  rules_service.py  validation_service.py
tests/: test_core.py
