[project]
name = "coffeemonitor-colombia"
version = "0.1.0"
description = "Plataforma de inteligencia de mercado para el sector cafetero colombiano"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Proprietary"}
authors = [
    {name = "Green Coffee Company"},
]
keywords = ["coffee", "colombia", "market-intelligence", "fnc"]

dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "pandas>=2.1.0",
    "openpyxl>=3.1.0",
    "schedule>=1.2.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "isort>=5.12.0",
]
gui = [
    "PySide6>=6.6.0",
]

[project.scripts]
coffeemonitor = "main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]

[tool.isort]
profile = "black"
line_length = 100
